--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -7,6 +7,40 @@
     <title>Nine Men's Morris</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="logo-container">
+          <img src="static/images/logo.png" alt="Logo" class="logo" />
+          <span class="logo-text">Nine Men's Morris</span>
+        </div>
+        <ul>
+          <li>
+            <button class="nav-btn" data-target="section1">Seção 1</button>
+          </li>
+          <li>
+            <button class="nav-btn" data-target="section2">Seção 2</button>
+          </li>
+          <li>
+            <button class="nav-btn" data-target="section3">Seção 3</button>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <section id="section1" class="content active">
+        <h2>Bem-vindo à Seção 1</h2>
+        <p>Conteúdo inicial da primeira seção.</p>
+      </section>
+      <section id="section2" class="content">
+        <h2>Seção 2</h2>
+        <p>Conteúdo da segunda seção.</p>
+      </section>
+      <section id="section3" class="content">
+        <h2>Seção 3</h2>
+        <p>Conteúdo da terceira seção.</p>
+      </section>
+    </main>
     <script src="static/js/script.js"></script>
   </body>
 </html>
