pratical class - 14/10/2024 - Initial game board logic

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -109,17 +109,17 @@
                   class="select-config"
                   name="first-player"
                 >
-                  <option value="player">Player1</option>
-                  <option value="ai">AI</option>
+                  <option value="1">Player1</option>
+                  <option value="2">AI</option>
                 </select>
               </div>
 
               <div class="select-group">
                 <label class="label-config" for="ai-level">AI Dificulty</label>
                 <select id="ai-level" class="select-config" name="ai-level">
-                  <option value="easy">Easy</option>
-                  <option value="medium">Medium</option>
-                  <option value="hard">Hard</option>
+                  <option value="1">Easy</option>
+                  <option value="2">Medium</option>
+                  <option value="3">Hard</option>
                 </select>
               </div>
 
