Added more info to the game board

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -51,7 +51,23 @@
 
         <!-- Game Board -->
         <section id="section2" class="content">
-          <div id="board" class="board-container"></div>
+          <div class="game-phase">
+            <h3 id="current-phase">Placing Phase</h3>
+          </div>
+
+          <div id="player-game-board" class="player-game-board">
+            <div id="player1-info" class="player-info">
+              <h3 id="player1-name">Player 1</h3>
+              <p id="player1-pieces">Pieces: 9</p>
+            </div>
+
+            <div id="board" class="board-container"></div>
+
+            <div id="player2-info" class="player-info">
+              <h3 id="player2-name">Player 2</h3>
+              <p id="player2-pieces">Pieces: 9</p>
+            </div>
+          </div>
         </section>
 
         <!-- Configuration -->
