changed some styling on the board section

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -58,14 +58,16 @@
           <div id="player-game-board" class="player-game-board">
             <div id="player1-info" class="player-info">
               <h3 id="player1-name">Player 1</h3>
-              <p id="player1-pieces">Pieces: 9</p>
+              <!-- <p id="player1-pieces">Pieces: 9</p> -->
+              <!-- <div id="player1-pieces-container" class="pieces-container"></div> -->
             </div>
 
             <div id="board" class="board-container"></div>
 
             <div id="player2-info" class="player-info">
               <h3 id="player2-name">Player 2</h3>
-              <p id="player2-pieces">Pieces: 9</p>
+              <!-- <p id="player2-pieces">Pieces: 9</p> -->
+              <!-- <div id="player2-pieces-container" class="pieces-container"></div> -->
             </div>
           </div>
         </section>
