Switched the main dots for navigation arrows

--- a/Nine-Mens-Morris/public/index.html
+++ b/Nine-Mens-Morris/public/index.html
@@ -51,6 +51,9 @@
           <div class="rules">
             <!-- Main Topic Slider -->
             <div class="main-slider-container">
+              <!-- Navigation Arrows -->
+              <button id="prev-topic" class="arrow left-arrow"></button>
+              <!-- Left Arrow -->
               <div class="main-slider">
                 <!-- Topic 1 -->
                 <div class="topic-slide active">
@@ -117,12 +120,8 @@
                   </div>
                 </div>
               </div>
-
-              <!-- Dots for navigating between topics -->
-              <div class="main-slider-dots">
-                <span class="main-dot active" data-topic="0"></span>
-                <span class="main-dot" data-topic="1"></span>
-              </div>
+              <button id="next-topic" class="arrow right-arrow"></button>
+              <!-- Right Arrow -->
             </div>
           </div>
         </section>
